--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+    android:shape="rectangle" >
 
-    <solid android:color="@color/colorAccent" />
-    <corners android:radius="30dp" />
+    <solid android:color="#87B0FF" />
+    <corners android:radius="55dp" />
+    <size android:width="55dp" android:height="55dp"/>
 </shape>
